# gs_ui_changes

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
GhostSession/: CMakeLists.txt
GhostSession/Source/Audio/: AudioEngine.cpp  AudioStreamCodec.h
GhostSession/Source/Auth/: AuthManager.cpp  AuthManager.h
GhostSession/Source/Core/: AppState.h  GhostLog.h  GhostModels.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
GhostSession/Source/FileTransfer/: DragDropHandler.h  FileTransferManager.cpp
GhostSession/Source/Network/: ApiClient.cpp  ApiClient.h  AudioStreamManager.cpp  LocalClient.cpp  LocalClient.h  WebSocketConnection.cpp  WebSocketConnection.h
GhostSession/Source/Session/: SessionManager.h  SharedTransport.cpp  SharedTransport.h
GhostSession/Source/UI/: ChatOverlay.cpp  ChatOverlay.h  CollaboratorPanel.cpp  CollaboratorPanel.h  CollaboratorsPanel.cpp  CommentsPanel.cpp  CommentsPanel.h  DashboardView.cpp  DashboardView.h  GhostTheme.cpp  GhostTheme.h  GhostWebView.cpp  GhostWebView.h  HeaderBar.cpp  HeaderBar.h  PluginStatusBar.cpp  PluginStatusBar.h  SessionLobby.cpp  TrackListPanel.h  TrackStatusBar.cpp  TrackStatusBar.h  VersionsPanel.cpp  WaveformDisplay.cpp  WaveformDisplay.h
GhostSession/server/: package-lock.json  package.json  server.js
apps/desktop/: index.html
apps/desktop/public/: master-limiter-worklet.js
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/hooks/: useCursorTracking.ts  useGiphy.ts  useNotifications.ts  useSampleLibrary.ts  useSamplePacks.ts  useWebRTC.ts
apps/desktop/src/lib/: api.ts  audio.ts  log.ts  stretch.ts
apps/desktop/src/stores/: audioStore.ts  authStore.ts  bookingsStore.ts  communityStore.ts  drumRackStore.ts  sessionStore.ts
apps/desktop/src/styles/: globals.css
apps/plugin/Source/: JuceHeader.h
apps/plugin/Source/Audio/: AudioEngine.h  AudioStreamCodec.cpp  MidiCollaborator.cpp  MidiCollaborator.h
apps/plugin/Source/Core/: AppState.cpp  GhostModels.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
apps/plugin/Source/FileTransfer/: DragDropHandler.cpp  FileTransferManager.h
apps/plugin/Source/Network/: ApiClient.cpp  ApiClient.h  AudioStreamManager.h  WebSocketConnection.cpp  WebSocketConnection.h
apps/plugin/Source/Session/: SessionManager.cpp  SessionManager.h  SessionState.cpp  SessionState.h
apps/plugin/Source/UI/: CollaboratorsPanel.cpp  CollaboratorsPanel.h  DashboardView.cpp  DashboardView.h  DragDropZone.cpp  DragDropZone.h  GhostWebView.cpp  GhostWebView.h  HeaderBar.cpp  HeaderBar.h  LoginPanel.cpp  LoginPanel.h  ProjectListPanel.cpp  ProjectListPanel.h  ProjectView.h  SessionLobby.h  SessionView.cpp  SessionView.h  Sidebar.cpp  Sidebar.h  TrackListPanel.cpp  TrackStatusBar.cpp  TrackStatusBar.h  TransportBar.cpp  TransportBar.h  VersionsPanel.h  WaveformDisplay.cpp  WaveformDisplay.h
apps/server/: .env.example  drizzle.config.ts  ghost_session.db-shm  ghost_session.db-wal  tsconfig.json
apps/server/public/: index.html
apps/server/public/assets/: index--BUvhy5I.js  index--BUvhy5I.js.map  index-0-RqwuhR.css  index-B7QLD-oj.css  index-B7yUmUf1.js  index-B7yUmUf1.js.map  index-BEAF0mQx.js  index-BEAF0mQx.js.map  index-BIqqQ6jp.js  index-BIqqQ6jp.js.map  index-BL3z8P54.css  index-BLy7n-Tp.js  index-BLy7n-Tp.js.map  index-BOtxwjFN.css  index-BP0vaFWu.js  index-BP0vaFWu.js.map  index-BW47Dk0D.css  index-BY0l9C8I.js  index-BY0l9C8I.js.map  index-BZ2pYBrS.css  index-B_upV5mY.js  index-B_upV5mY.js.map  index-Ba5VfhNE.js  index-Ba5VfhNE.js.map  index-BhGqBFqx.js  index-BhGqBFqx.js.map  index-BkY2p60X.css  index-BkmCm4Du.js  index-BkmCm4Du.js.map  index-BnucTviA.js  index-BnucTviA.js.map  index-Bql9j-sm.js  index-Bql9j-sm.js.map  index-Bzw4Q1_2.js  index-Bzw4Q1_2.js.map  index-C4vZt7sI.js  index-C4vZt7sI.js.map  index-CD3InY-V.js  (+78 more)
apps/server/src/: index.ts
(+61 files in other folders)
